# react-native-mlkit-face-detection

./: CONTRIBUTING.md  README.md  package.json  react-native-mlkit-face-detection.podspec  tsconfig.json
android/: CMakeLists.txt  SKRNMLKitAndroidFaceDetectionCPP.cpp  SKRNMLKitAndroidFaceDetectionCPP.h  build.gradle  cpp-adapter.cpp  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativemlkitfacedetection/: MlkitFaceDetectionModule.java  MlkitFaceDetectionPackage.java  SKRNMLKitAndroidFaceDetectionJava.java
cpp/: react-native-mlkit-face-detection.cpp  react-native-mlkit-face-detection.h
example/: app.json  babel.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativemlkitfacedetection/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativemlkitfacedetection/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MlkitFaceDetectionExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MlkitFaceDetectionExample.xcodeproj/: project.pbxproj
example/ios/MlkitFaceDetectionExample.xcodeproj/xcshareddata/xcschemes/: MlkitFaceDetectionExample.xcscheme
example/ios/MlkitFaceDetectionExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  TestVisionCamera.tsx
ios/: MlkitFaceDetection.h  MlkitFaceDetection.mm  SKRNMLKitFaceDetection.h  SKRNMLKitFaceDetection.mm  SKRNMLKitFaceDetectionVisionCameraFrameProcessor.h  SKRNMLKitFaceDetectionVisionCameraFrameProcessor.mm  SKRNMLKitiOSFaceDetectionMappings.mm  SKRNMLKitiOSFaceDetector.h  SKRNMLKitiOSFaceDetector.mm
ios/MlkitFaceDetection.xcodeproj/: project.pbxproj
src/: FrameProcessor.tsx  index.tsx  types.ts
